# postgis_test

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  compose.yml  pyproject.toml  ruff.toml
db_dumps/: activity.csv  building.csv  organization.csv  organization_activity.csv  phone_number.csv
src/migrations/: env.py  script.py.mako
src/migrations/versions/: 2025_05_20_1350-05bc99e1b619_initial.py
src/roga_and_kopyta/: app.py  cli.py
src/roga_and_kopyta/api/: __init__.py
src/roga_and_kopyta/api/v1/: __init__.py  organization.py
src/roga_and_kopyta/config/: __init__.py  config.py  logs.py
src/roga_and_kopyta/core/: authenticate.py  deps.py
src/roga_and_kopyta/core/adapters/: database.py
src/roga_and_kopyta/core/schemas/: __init__.py  base.py  exceptions.py
src/roga_and_kopyta/core/types/: __init__.py  annotated_types.py  geo.py
src/roga_and_kopyta/core/utils/: __init__.py  datetime.py
src/roga_and_kopyta/management/: __init__.py  loader.py
src/roga_and_kopyta/models/: __init__.py  activity.py  building.py  organization.py
src/roga_and_kopyta/models/base/: __init__.py  annotated_types.py  base.py  mixin.py
src/roga_and_kopyta/repository/: __init__.py  organization.py
src/roga_and_kopyta/repository/base/: __init__.py  base.py  ctx_session_keeper.py
src/roga_and_kopyta/schemas/: __init__.py  activity.py  building.py  organizations.py
src/roga_and_kopyta/services/: __init__.py  base.py  organization.py
