[project]
name = "roga-and-kopyta"
version = "0.1.0"
description = "Postgis usage app"
requires-python = ">=3.12.10"
authors = [
    { name = "Korney Burau", email = "korneyburau@gmail.com" }
]

dependencies = [
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "connectorx>=0.4.3",
    "fastapi[all]>=0.115.12",
    "geoalchemy2>=0.17.1",
    "pandas>=2.2.3",
    "polars>=1.29.0",
    "psycopg2-binary>=2.9.10",
    "pyarrow>=20.0.0",
    "pydantic-settings>=2.9.1",
    "shapely>=2.1.1",
    "sqlalchemy>=2.0.41",
    "uvicorn[standard]>=0.34.2",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.15.0",
    "notebook>=7.4.2",
    "pre-commit>=4.2.0",
    "ruff>=0.11.11",
]

[project.scripts]
app = "roga_and_kopyta.cli:run"
cli = "roga_and_kopyta.cli:cli"
up = "roga_and_kopyta.cli:upgrade_head"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = '3.12'
strict = true
pretty = true
show_error_context = true
show_column_numbers = true
show_error_codes = true
no_implicit_optional = true
ignore_missing_imports = true
disallow_subclassing_any = false
exclude = [
    '^setup\.py$',
    '^venv/',
    '^.venv/',
    '^test+\.py$',
    '^conftest\.py$',
    '^tests/',
    '^src/migrations/',
    '.*tmp.*\.py$'
]
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module="roga_and_kopyta.api.v1.*"
ignore_errors = true

